--- a/ueventd.qct.rc
+++ b/ueventd.qct.rc
@@ -1,8 +1,19 @@
-/dev/oncrpc/*             0660   radio       system
-/dev/msm_camera/*          0660   system       system
+/dev/oncrpc/*             0660   radio      system
+/dev/msm_camera/*         0660   system     system
 /dev/bma020               0640   compass    system
-/dev/smdcntl0               0640   radio    radio
-/dev/smdcntl1               0640   radio    radio
-/dev/smdcntl2               0640   radio    radio
-/dev/kgsl-3d0               0666   root       root
-/dev/msm_preproc_ctl        0660   system   audio
+/dev/smdcntl0             0640   radio      radio
+/dev/smdcntl1             0640   radio      radio
+/dev/smdcntl2             0640   radio      radio
+/dev/msm_preproc_ctl      0660   system     audio
+/dev/hw3d                 0660   system     graphics
+/dev/msm_rotator          0660   system     graphics
+/dev/pmem_gpu*            0666   system     graphics
+/dev/genlock              0666   system     graphics
+/dev/graphics/fb*         0666   system     graphics
+/dev/msm_pcm_dec*         0666   system     audio
+/dev/snd/controlC0*       0666   system     audio
+/dev/amrnb*               0660   system     audio
+/dev/amrwb*               0660   system     audio
+/dev/msm_qcelp*           0660   system     audio
+/dev/evrc*                0660   system     audio
+/dev/msm_voicememo*       0660   system     audio
