--- a/ueventd.qct.rc
+++ b/ueventd.qct.rc
@@ -1,19 +1,25 @@
 /dev/oncrpc/*             0660   radio      system
-/dev/msm_camera/*         0660   system     system
 /dev/bma020               0640   compass    system
-/dev/smdcntl0             0640   radio      radio
-/dev/smdcntl1             0640   radio      radio
-/dev/smdcntl2             0640   radio      radio
-/dev/msm_preproc_ctl      0660   system     audio
-/dev/hw3d                 0660   system     graphics
-/dev/msm_rotator          0660   system     graphics
-/dev/pmem_gpu*            0666   system     graphics
-/dev/genlock              0666   system     graphics
-/dev/graphics/fb*         0666   system     graphics
-/dev/msm_pcm_dec*         0666   system     audio
-/dev/snd/controlC0*       0666   system     audio
-/dev/amrnb*               0660   system     audio
-/dev/amrwb*               0660   system     audio
-/dev/msm_qcelp*           0660   system     audio
-/dev/evrc*                0660   system     audio
-/dev/msm_voicememo*       0660   system     audio
+/dev/msm_camera/*           0660   system   camera
+/dev/smdcntl0               0640   radio    radio
+/dev/smdcntl1               0640   radio    radio
+/dev/smdcntl2               0640   radio    radio
+/dev/kgsl-3d0               0666   root     root
+/dev/taos                   0660   system   system
+/dev/ISL                    0660   system   system
+/dev/lis302dl               0660   system   system
+/dev/adxl34x                0660   system   system
+/dev/si4708                 0660   system   system
+/dev/msm_preproc_ctl        0660   system   audio
+/dev/msm_aac                0660   system   audio
+/dev/msm_evrc               0660   system   audio
+/dev/msm_mp3                0660   system   audio
+/dev/msm_pcm_dec            0660   system   audio
+/dev/msm_qcelp              0660   system   audio
+/dev/msm_voicememo          0660   system   audio
+/dev/msm_wma                0660   system   audio
+/dev/msm_wmapro             0660   system   audio
+/dev/system_bus_freq        0666   system   system
+/dev/genlock                0666   root     system
+/dev/ttyHS0                 0660   root     system
+/dev/graphics/fb0           0666   graphics graphics
